fix the db connection